# BHRaytracer

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  niagarasetup  teachsetup
scripts/: avg.py  graph.py  graph_weak.py  mpi.perf  mpi_strong.out  mpi_strong.sh  mpi_strong_multinode.out  mpi_strong_multinode.sh  mpi_weak.out  mpi_weak.sh  mpi_weak2.out  mpi_weak2.sh  omp.perf  omp_strong.out  omp_strong.sh  omp_weak.out  omp_weak.sh  omp_weak2.out  omp_weak2.sh  plot.gp  weak.sh
src/: camera.cc  camera.h  color.h  common.h  decomp.cc  decomp.h  gsl.cc  hittable.h  hittable_list.h  img.cc  img.h  img_data.cc  img_data.h  interval.cc  interval.h  main.cc  ray.h  solve.cc  solve.h  sphere.h  ticktock.h  vec3.h
